removing class labels for tasks

--- a/dataV3.ipynb
+++ b/dataV3.ipynb
@@ -298,7 +298,7 @@
     "    tasks_df    = pd.DataFrame(rows_tasks)\n",
     "\n",
     "    # Post-process: assign task classes using quantiles computed on this batch\n",
-    "    tasks_df = assign_task_classes(tasks_df)\n",
+    "    # tasks_df = assign_task_classes(tasks_df)\n",
     "\n",
     "    # Optimize dtypes (optional but useful)\n",
     "    if len(tasks_df):\n",
@@ -313,47 +313,47 @@
     "    }\n",
     "\n",
     "\n",
-    "def assign_task_classes(tasks_df: pd.DataFrame) -> pd.DataFrame:\n",
-    "    \"\"\"\n",
-    "    Assign class_label based on quantiles in the generated batch:\n",
-    "      - time_sensitive   : has_deadline == 1 and deadline_s <= q30(deadline_s of non-NaN)\n",
-    "      - data_heavy       : b_mb >= q70(b_mb)\n",
-    "      - compute_heavy    : c_cycles >= q70(c_cycles)\n",
-    "      - normal           : otherwise\n",
-    "    Priority: time_sensitive > data_heavy > compute_heavy > normal\n",
-    "    \"\"\"\n",
-    "    if tasks_df.empty:\n",
-    "        tasks_df[\"class_label\"] = pd.Categorical([], categories=[\n",
-    "            \"time_sensitive\", \"data_heavy\", \"compute_heavy\", \"normal\"\n",
-    "        ])\n",
-    "        return tasks_df\n",
+    "# def assign_task_classes(tasks_df: pd.DataFrame) -> pd.DataFrame:\n",
+    "#     \"\"\"\n",
+    "#     Assign class_label based on quantiles in the generated batch:\n",
+    "#       - time_sensitive   : has_deadline == 1 and deadline_s <= q30(deadline_s of non-NaN)\n",
+    "#       - data_heavy       : b_mb >= q70(b_mb)\n",
+    "#       - compute_heavy    : c_cycles >= q70(c_cycles)\n",
+    "#       - normal           : otherwise\n",
+    "#     Priority: time_sensitive > data_heavy > compute_heavy > normal\n",
+    "#     \"\"\"\n",
+    "#     if tasks_df.empty:\n",
+    "#         tasks_df[\"class_label\"] = pd.Categorical([], categories=[\n",
+    "#             \"time_sensitive\", \"data_heavy\", \"compute_heavy\", \"normal\"\n",
+    "#         ])\n",
+    "#         return tasks_df\n",
     "\n",
-    "    df = tasks_df.copy()\n",
+    "#     df = tasks_df.copy()\n",
     "\n",
-    "    def safe_quantile(series: pd.Series, q: float, default: float) -> float:\n",
-    "        series = series.dropna()\n",
-    "        if len(series) == 0:\n",
-    "            return default\n",
-    "        return float(series.quantile(q))\n",
+    "#     def safe_quantile(series: pd.Series, q: float, default: float) -> float:\n",
+    "#         series = series.dropna()\n",
+    "#         if len(series) == 0:\n",
+    "#             return default\n",
+    "#         return float(series.quantile(q))\n",
     "\n",
-    "    q_deadline_30 = safe_quantile(df.loc[df[\"has_deadline\"] == 1, \"deadline_s\"], 0.30, default=0.5)\n",
-    "    q_b_70        = safe_quantile(df[\"b_mb\"], 0.70, default=float(df[\"b_mb\"].median() if len(df) else 3.0))\n",
-    "    q_c_70        = safe_quantile(df[\"c_cycles\"], 0.70, default=float(df[\"c_cycles\"].median() if len(df) else 1.0))\n",
+    "#     q_deadline_30 = safe_quantile(df.loc[df[\"has_deadline\"] == 1, \"deadline_s\"], 0.30, default=0.5)\n",
+    "#     q_b_70        = safe_quantile(df[\"b_mb\"], 0.70, default=float(df[\"b_mb\"].median() if len(df) else 3.0))\n",
+    "#     q_c_70        = safe_quantile(df[\"c_cycles\"], 0.70, default=float(df[\"c_cycles\"].median() if len(df) else 1.0))\n",
     "\n",
-    "    is_time_sens  = (df[\"has_deadline\"] == 1) & (df[\"deadline_s\"] <= q_deadline_30)\n",
-    "    is_data_heavy = (df[\"b_mb\"] >= q_b_70)\n",
-    "    is_comp_heavy = (df[\"c_cycles\"] >= q_c_70)\n",
+    "#     is_time_sens  = (df[\"has_deadline\"] == 1) & (df[\"deadline_s\"] <= q_deadline_30)\n",
+    "#     is_data_heavy = (df[\"b_mb\"] >= q_b_70)\n",
+    "#     is_comp_heavy = (df[\"c_cycles\"] >= q_c_70)\n",
     "\n",
-    "    class_label = np.full(len(df), \"normal\", dtype=object)\n",
-    "    class_label[is_comp_heavy] = \"compute_heavy\"\n",
-    "    class_label[is_data_heavy] = \"data_heavy\"\n",
-    "    class_label[is_time_sens]  = \"time_sensitive\"\n",
+    "#     class_label = np.full(len(df), \"normal\", dtype=object)\n",
+    "#     class_label[is_comp_heavy] = \"compute_heavy\"\n",
+    "#     class_label[is_data_heavy] = \"data_heavy\"\n",
+    "#     class_label[is_time_sens]  = \"time_sensitive\"\n",
     "\n",
-    "    df[\"class_label\"] = pd.Categorical(class_label, categories=[\n",
-    "        \"time_sensitive\", \"data_heavy\", \"compute_heavy\", \"normal\"\n",
-    "    ], ordered=False)\n",
+    "#     df[\"class_label\"] = pd.Categorical(class_label, categories=[\n",
+    "#         \"time_sensitive\", \"data_heavy\", \"compute_heavy\", \"normal\"\n",
+    "#     ], ordered=False)\n",
     "\n",
-    "    return df\n",
+    "#     return df\n",
     "\n",
     "# -------------------------\n",
     "# save & plotting utilities\n",
