2. Data Validation done

--- a/Topology_Generator/topology_generator.ipynb
+++ b/Topology_Generator/topology_generator.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\niush\\anaconda3\\lib\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
+      "c:\\Users\\niush\\anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.XWYDX2IKJW2NMTWSFYNGFUWKQU3LYTCZ.gfortran-win_amd64.dll\n",
+      "c:\\Users\\niush\\anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas64__v0.3.21-gcc_10_3_0.dll\n",
+      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -126,7 +136,7 @@
     "    os.makedirs(os.path.dirname(path), exist_ok=True)\n",
     "    K = M.shape[0]\n",
     "    header = [f\"mec_{i}\" for i in range(K)] + [\"cloud\"]\n",
-    "    lines = [\"no.,\".join([\"\"] + header)]\n",
+    "    lines = [\",\".join([\"\"] + header)]\n",
     "    for i in range(K):\n",
     "        row = \",\".join([f\"mec_{i}\"] + [str(float(x)) for x in M[i, :]])\n",
     "        lines.append(row)\n",
