data generator and topology generated peched

--- a/Topology_Generator/topology_generator.ipynb
+++ b/Topology_Generator/topology_generator.ipynb
@@ -51,15 +51,23 @@
     "HOODIE–style Topology Builder (enhanced, 3 variants)\n",
     "- Separate private/public capacities (not merged)\n",
     "- Connection matrix: shape (K, K+1), last column = MEC→Cloud\n",
-    "- Styles: 'fully_connected' | 'skip_connections' | 'clustered'\n",
+    "- Styles: 'fully_connected' | 'skip_connections' (k-nearest ring) | 'clustered'\n",
     "- Inputs per-second -> scaled by Delta to per-slot (HOODIE-compatible)\n",
     "\n",
     "Core outputs per topology: topology.json, topology_meta.json\n",
     "Extras per topology: connection_matrix.csv, topology_graph.png, topology_report.md\n",
+    "\n",
+    "Fixes/Improvements:\n",
+    "- Enforce symmetry + zero diagonal (MEC↔MEC)\n",
+    "- Add parameter asserts\n",
+    "- Add hyperparameters dump to meta\n",
+    "- Add link density to report\n",
+    "- Optional weak inter-cluster links via inter_cluster_frac\n",
+    "- Document skip_connections semantics in meta\n",
     "\"\"\"\n",
     "\n",
     "from __future__ import annotations\n",
-    "from dataclasses import dataclass\n",
+    "from dataclasses import dataclass, asdict\n",
     "from typing import Dict, Optional, List, Tuple\n",
     "import numpy as np\n",
     "import json, os, time, hashlib, platform, getpass\n",
@@ -104,11 +112,12 @@
     "\n",
     "    # ----- Generator\n",
     "    topology_type: str = \"skip_connections\"  # 'fully_connected' | 'skip_connections' | 'clustered'\n",
-    "    skip_k: int = 5                           # for skip_connections\n",
+    "    skip_k: int = 5                           # for skip_connections (k-nearest ring)\n",
     "    symmetric: bool = True\n",
     "\n",
     "    # For clustered\n",
     "    num_clusters: int = 3\n",
+    "    inter_cluster_frac: float = 0.0  # fraction of horiz_cap_min for weak inter-cluster links (0.0 => none)\n",
     "\n",
     "    # ----- RNG\n",
     "    seed: int = 2025\n",
@@ -143,6 +152,22 @@
     "    with open(path, \"w\", encoding=\"utf-8\") as f:\n",
     "        f.write(\"\\n\".join(lines))\n",
     "    return path\n",
+    "\n",
+    "# =========================\n",
+    "# Validations\n",
+    "# =========================\n",
+    "def _validate_h(h: TopologyHyper) -> None:\n",
+    "    assert h.number_of_servers > 0 and h.time_step > 0\n",
+    "    assert h.horiz_cap_max >= h.horiz_cap_min and h.cloud_cap_max >= h.cloud_cap_min\n",
+    "    if h.private_cpu_min is not None:\n",
+    "        assert h.private_cpu_max is not None and h.private_cpu_max >= h.private_cpu_min\n",
+    "        assert h.public_cpu_min  is not None and h.public_cpu_max  is not None and h.public_cpu_max >= h.public_cpu_min\n",
+    "    if h.cpu_total_min is not None:\n",
+    "        assert h.cpu_total_max is not None and h.cpu_total_max >= h.cpu_total_min\n",
+    "        share = h.public_share if h.public_share is not None else 0.3\n",
+    "        assert 0.0 <= share <= 1.0\n",
+    "    assert h.num_clusters >= 1\n",
+    "    assert h.inter_cluster_frac >= 0.0\n",
     "\n",
     "# =========================\n",
     "# Builders: compute & cloud\n",
@@ -196,6 +221,9 @@
     "    return M\n",
     "\n",
     "def _build_connection_matrix_skip_connections(h: TopologyHyper, rng: np.random.Generator) -> np.ndarray:\n",
+    "    \"\"\"\n",
+    "    k-nearest ring on a circular index: each node connects to next 'skip_k' neighbors.\n",
+    "    \"\"\"\n",
     "    K = h.number_of_servers\n",
     "    M = np.zeros((K, K + 1), dtype=float)\n",
     "    _set_vertical_mec_to_cloud(M, h, rng)\n",
@@ -215,8 +243,8 @@
     "\n",
     "def _build_connection_matrix_clustered(h: TopologyHyper, rng: np.random.Generator) -> np.ndarray:\n",
     "    \"\"\"\n",
-    "    Clustered = several clusters with fully-connected intra-cluster links (symmetric)\n",
-    "    and no/minimal inter-cluster connections.\n",
+    "    Clustered = several clusters with fully-connected intra-cluster links (symmetric),\n",
+    "    and zero/weak inter-cluster connections controlled by inter_cluster_frac.\n",
     "    \"\"\"\n",
     "    K = h.number_of_servers\n",
     "    C = max(1, int(h.num_clusters))\n",
@@ -239,17 +267,35 @@
     "                M[i, j] = cap_slot\n",
     "                M[j, i] = cap_slot\n",
     "\n",
-    "    # Between clusters: zero (can assign a very small value if needed)\n",
-    "    return M\n",
+    "    # Weak inter-cluster links if requested\n",
+    "    if h.inter_cluster_frac > 0.0:\n",
+    "        weak = float(h.horiz_cap_min * h.inter_cluster_frac * h.time_step)\n",
+    "        for c1 in range(len(clusters)):\n",
+    "            for c2 in range(c1 + 1, len(clusters)):\n",
+    "                a1, b1 = clusters[c1]\n",
+    "                a2, b2 = clusters[c2]\n",
+    "                i = a1   # representative node of cluster 1\n",
+    "                j = a2   # representative node of cluster 2\n",
+    "                if i != j:\n",
+    "                    M[i, j] = max(M[i, j], weak)\n",
+    "                    if h.symmetric:\n",
+    "                        M[j, i] = max(M[j, i], weak)\n",
     "\n",
+    "    return M\n",
     "\n",
     "def _build_connection_matrix(h: TopologyHyper, rng: np.random.Generator) -> np.ndarray:\n",
     "    if h.topology_type == \"fully_connected\":\n",
-    "        return _build_connection_matrix_fully_connected(h, rng)\n",
+    "        M = _build_connection_matrix_fully_connected(h, rng)\n",
     "    elif h.topology_type == \"clustered\":\n",
-    "        return _build_connection_matrix_clustered(h, rng)\n",
+    "        M = _build_connection_matrix_clustered(h, rng)\n",
     "    else:\n",
-    "        return _build_connection_matrix_skip_connections(h, rng)\n",
+    "        M = _build_connection_matrix_skip_connections(h, rng)\n",
+    "\n",
+    "    K = h.number_of_servers\n",
+    "    if h.symmetric:\n",
+    "        M[:, :K] = np.maximum(M[:, :K], M[:, :K].T)\n",
+    "    np.fill_diagonal(M[:, :K], 0.0)\n",
+    "    return M\n",
     "\n",
     "# =========================\n",
     "# Graph drawing (optional)\n",
@@ -262,6 +308,9 @@
     "        return None\n",
     "\n",
     "    K = M.shape[0]\n",
+    "    import networkx as nx\n",
+    "    import matplotlib.pyplot as plt\n",
+    "\n",
     "    G = nx.Graph()\n",
     "\n",
     "    # MEC nodes\n",
@@ -334,6 +383,8 @@
     "    M = np.array(topo[\"connection_matrix\"], dtype=float)\n",
     "    horiz = M[:, :K]\n",
     "    vert  = M[:, K]\n",
+    "    nonzero = int((horiz > 0).sum())\n",
+    "    density = nonzero / float(K * (K - 1)) if K > 1 else 0.0\n",
     "\n",
     "    md = []\n",
     "    md.append(f\"# Topology Report\\n\")\n",
@@ -349,7 +400,7 @@
     "    md.append(f\"- Cloud (single): {cloud:.3g}\")\n",
     "    md.append(\"\")\n",
     "    md.append(f\"## Link Capacities ({link_unit})\")\n",
-    "    md.append(f\"- Horizontal MEC↔MEC (non-zero entries): {int((horiz>0).sum())}\")\n",
+    "    md.append(f\"- Horizontal MEC↔MEC (non-zero entries): {nonzero} (density={density:.3f})\")\n",
     "    md.append(f\"- MEC→Cloud (length K): min={vert.min():.3g}, mean={vert.mean():.3g}, max={vert.max():.3g}\")\n",
     "    md.append(\"\")\n",
     "    if graph_png:\n",
@@ -369,6 +420,7 @@
     "def build_topology(h: TopologyHyper,\n",
     "                   out_topology: str = \"./topology/topology.json\",\n",
     "                   out_meta: str = \"./topology/topology_meta.json\") -> Dict[str, str]:\n",
+    "    _validate_h(h)\n",
     "    rng = np.random.default_rng(h.seed)\n",
     "\n",
     "    private_caps, public_caps = _build_compute_caps(h, rng)\n",
@@ -394,8 +446,14 @@
     "        \"fingerprint\": _fp(topo),\n",
     "        \"env\": {\"python\": platform.python_version(), \"user\": getpass.getuser()},\n",
     "        \"units\": {\"compute\": \"CPU cycles per slot\", \"links\": \"MB per slot\", \"time_step\": \"seconds\"},\n",
-    "        \"notes\": {\"inputs_unit\": {\"compute\": \"CPU cycles per second\", \"links\": \"MB per second\"},\n",
-    "                  \"conversion\": \"per_slot = per_second * time_step\"}\n",
+    "        \"notes\": {\n",
+    "            \"inputs_unit\": {\"compute\": \"CPU cycles per second\", \"links\": \"MB per second\"},\n",
+    "            \"conversion\": \"per_slot = per_second * time_step\",\n",
+    "            \"topology_semantics\": {\n",
+    "                \"skip_connections\": \"k-nearest ring; each MEC connects to next 'skip_k' neighbors on a circle\"\n",
+    "            }\n",
+    "        },\n",
+    "        \"hyperparameters\": asdict(h)\n",
     "    }\n",
     "\n",
     "    _save_json(topo, out_topology)\n",
@@ -450,6 +508,7 @@
     "        skip_k            = int(hp.get(\"skip_k\", 5)),\n",
     "        symmetric         = bool(hp.get(\"symmetric\", True)),\n",
     "        num_clusters      = int(hp.get(\"num_clusters\", 3)),\n",
+    "        inter_cluster_frac= float(hp.get(\"inter_cluster_frac\", 0.0)),\n",
     "        seed              = int(hp.get(\"seed\", 2025))\n",
     "    )\n",
     "\n",
@@ -487,6 +546,7 @@
     "    cloud_cap_max: float = 120.0,\n",
     "    # Cluster params\n",
     "    num_clusters: int = 3,\n",
+    "    inter_cluster_frac: float = 0.0,\n",
     "):\n",
     "    os.makedirs(out_root, exist_ok=True)\n",
     "\n",
@@ -503,7 +563,7 @@
     "                horiz_cap_min=horiz_cap_min, horiz_cap_max=horiz_cap_max,\n",
     "                cloud_cap_min=cloud_cap_min, cloud_cap_max=cloud_cap_max,\n",
     "                topology_type=\"fully_connected\", skip_k=1, symmetric=True,\n",
-    "                num_clusters=num_clusters,\n",
+    "                num_clusters=num_clusters, inter_cluster_frac=inter_cluster_frac,\n",
     "                seed=seed_base + 101\n",
     "            )\n",
     "        ),\n",
@@ -519,7 +579,7 @@
     "                horiz_cap_min=horiz_cap_min, horiz_cap_max=horiz_cap_max,\n",
     "                cloud_cap_min=cloud_cap_min, cloud_cap_max=cloud_cap_max,\n",
     "                topology_type=\"clustered\", symmetric=True,\n",
-    "                num_clusters=num_clusters,\n",
+    "                num_clusters=num_clusters, inter_cluster_frac=inter_cluster_frac,\n",
     "                seed=seed_base + 202\n",
     "            )\n",
     "        ),\n",
@@ -535,7 +595,7 @@
     "                horiz_cap_min=horiz_cap_min, horiz_cap_max=horiz_cap_max,\n",
     "                cloud_cap_min=cloud_cap_min, cloud_cap_max=cloud_cap_max,\n",
     "                topology_type=\"skip_connections\", skip_k=1, symmetric=True,  # ring\n",
-    "                num_clusters=num_clusters,\n",
+    "                num_clusters=num_clusters, inter_cluster_frac=inter_cluster_frac,\n",
     "                seed=seed_base + 303\n",
     "            )\n",
     "        ),\n",
@@ -571,7 +631,7 @@
     "        cloud_capacity=3.0e10,\n",
     "        horiz_cap_min=8.0, horiz_cap_max=12.0,\n",
     "        cloud_cap_min=80.0, cloud_cap_max=120.0,\n",
-    "        num_clusters=3,\n",
+    "        num_clusters=3, inter_cluster_frac=0.0,\n",
     "        out_root=\"./topologies\"\n",
     "    )\n",
     "    print(json.dumps(out, indent=2))\n"
