--- a/Algorithm/Algorithm.ipynb
+++ b/Algorithm/Algorithm.ipynb
@@ -1940,8 +1940,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Dict, Any, Tuple\n",
-    "\n",
     "def _extract_core_from_bundle(bundle: Dict[str, Any]) -> Dict[str, Any]:\n",
     "    required = [\"dataset\", \"topology_data\", \"connection_matrix_df\", \"Delta\", \"K\"]\n",
     "    for k in required:\n",
@@ -2099,6 +2097,99 @@
     "\n",
     "# Example access:\n",
     "env_configs[\"clustered\"][\"ep_000\"][\"heavy\"][\"agent_to_mec\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3> 7. Sanity Checks </h3>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this step, we verify that each env_config is internally consistent (queue shapes, capacities, agent→MEC mapping, and connection matrix are valid and ready for simulation)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[OK]   clustered/ep_000/heavy\n",
+      "[OK]   clustered/ep_000/light\n",
+      "[OK]   clustered/ep_000/moderate\n",
+      "[OK]   full_mesh/ep_000/heavy\n",
+      "[OK]   full_mesh/ep_000/light\n",
+      "[OK]   full_mesh/ep_000/moderate\n",
+      "[OK]   sparse_ring/ep_000/heavy\n",
+      "[OK]   sparse_ring/ep_000/light\n",
+      "[OK]   sparse_ring/ep_000/moderate\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sanity_check_env_config(env_config):\n",
+    "    errors = []\n",
+    "\n",
+    "    # 1) Agent → MEC alignment\n",
+    "    N_agents = env_config[\"N_agents\"]\n",
+    "    if len(env_config[\"agent_to_mec\"]) != N_agents:\n",
+    "        errors.append(\"Length of agent_to_mec does not match N_agents.\")\n",
+    "\n",
+    "    # 2) Queue initial state shapes\n",
+    "    K = env_config[\"K\"]\n",
+    "    q = env_config[\"queues_initial\"]\n",
+    "    if q[\"mec_local_cycles\"].shape != (K,):\n",
+    "        errors.append(\"mec_local_cycles queue shape mismatch.\")\n",
+    "    if q[\"mec_public_cycles\"].shape != (K,):\n",
+    "        errors.append(\"mec_public_cycles queue shape mismatch.\")\n",
+    "    if q[\"mec_bytes_in_transit\"].shape != (K,):\n",
+    "        errors.append(\"mec_bytes_in_transit queue shape mismatch.\")\n",
+    "    if q[\"cloud_cycles\"].shape != (1,):\n",
+    "        errors.append(\"cloud_cycles shape mismatch (should be (1,)).\")\n",
+    "\n",
+    "    # 3) Non-negative compute capacities\n",
+    "    if (env_config[\"private_cpu\"] < 0).any():\n",
+    "        errors.append(\"private_cpu has negative values.\")\n",
+    "    if (env_config[\"public_cpu\"] < 0).any():\n",
+    "        errors.append(\"public_cpu has negative values.\")\n",
+    "    if env_config[\"cloud_cpu\"] < 0:\n",
+    "        errors.append(\"cloud_cpu is negative.\")\n",
+    "\n",
+    "    # 4) Connection matrix dimension (K x K+1)\n",
+    "    M = env_config[\"connection_matrix\"]\n",
+    "    if M.shape != (K, K+1):\n",
+    "        errors.append(\"connection_matrix shape mismatch.\")\n",
+    "\n",
+    "    # 5) Action space correctness\n",
+    "    if env_config[\"action_space\"][\"type\"] != \"discrete\":\n",
+    "        errors.append(\"Action space must be discrete (LOCAL/MEC/CLOUD).\")\n",
+    "\n",
+    "    return errors\n",
+    "\n",
+    "\n",
+    "def sanity_check_all(env_configs):\n",
+    "    for topo_name, by_ep in env_configs.items():\n",
+    "        for ep_name, by_scen in by_ep.items():\n",
+    "            for scen_name, env_cfg in by_scen.items():\n",
+    "                errs = sanity_check_env_config(env_cfg)\n",
+    "                if errs:\n",
+    "                    print(f\"[FAIL] {topo_name}/{ep_name}/{scen_name}:\")\n",
+    "                    for e in errs:\n",
+    "                        print(\"   -\", e)\n",
+    "                else:\n",
+    "                    print(f\"[OK]   {topo_name}/{ep_name}/{scen_name}\")\n",
+    "\n",
+    "\n",
+    "# Run all sanity checks\n",
+    "sanity_check_all(env_configs)\n"
    ]
   }
  ],
