reviewed until step4

--- a/Topology_Generator/topology_generator.ipynb
+++ b/Topology_Generator/topology_generator.ipynb
@@ -634,7 +634,7 @@
     "        num_clusters=3, inter_cluster_frac=0.0,\n",
     "        out_root=\"./topologies\"\n",
     "    )\n",
-    "    print(json.dumps(out, indent=2))\n"
+    "    print(json.dumps(out, indent=2))"
    ]
   }
  ],
