--- a/Algorithm/Algorithm.ipynb
+++ b/Algorithm/Algorithm.ipynb
@@ -7894,14 +7894,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['Delta', 'K', 'topology_type', 'connection_matrix', 'private_cpu', 'public_cpu', 'cloud_cpu', 'N_agents', 'agent_to_mec', 'episodes', 'agents', 'arrivals', 'tasks', 'queues_initial', 'action_space', 'state_spec', 'checks', 'agent_profiles', 'clustering'])\n",
+      "dict_keys(['Delta', 'K', 'topology_type', 'connection_matrix', 'private_cpu', 'public_cpu', 'cloud_cpu', 'N_agents', 'agent_to_mec', 'episodes', 'agents', 'arrivals', 'tasks', 'queues_initial', 'action_space', 'state_spec', 'checks', 'agent_profiles'])\n",
       "   agent_id       f_local  f_local_slot      m_local  lambda_mean  lambda_var  \\\n",
       "0         0  1.741183e+09  1.741183e+09  5713.849721     1.400325    0.474341   \n",
       "1         1  1.352326e+09  1.352326e+09  4566.428755     1.125348    0.140472   \n",
@@ -7978,7 +7978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8107,7 +8107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8153,7 +8153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -8195,7 +8195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -8235,7 +8235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -8271,7 +8271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8722,7 +8722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -8876,7 +8876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -8904,7 +8904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -8934,7 +8934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -9111,7 +9111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -9200,11 +9200,327 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.cluster import KMeans\n",
+    "from typing import Dict, Any\n",
+    "\n",
+    "# ======================================================\n",
+    "# Step 4.3 — Final K-Means Clustering Using Selected K\n",
+    "# ======================================================\n",
+    "#\n",
+    "# For each (episode → topology → scenario), we:\n",
+    "#   1) Fetch best_K from step 4.2\n",
+    "#   2) Run K-Means (once) using best_K\n",
+    "#   3) Store:\n",
+    "#        - cluster_labels (per agent)\n",
+    "#        - cluster_centers (scaled feature space)\n",
+    "#        - agent_ids for mapping\n",
+    "#\n",
+    "# Results written to:\n",
+    "#   env_cfg[\"clustering\"][\"final\"] = {\n",
+    "#       \"K\": best_K,\n",
+    "#       \"labels\": np.ndarray shape (n_agents,),\n",
+    "#       \"centers\": np.ndarray shape (K, n_features),\n",
+    "#       \"agent_ids\": np.ndarray\n",
+    "#   }\n",
+    "# ======================================================\n",
+    "\n",
+    "\n",
+    "def step4_3_run_final_kmeans_for_all_envs(\n",
+    "    env_configs: Dict[str, Dict[str, Dict[str, Any]]],\n",
+    "    random_state: int = 42,\n",
+    "    verbose: bool = True\n",
+    ") -> Dict[str, Dict[str, Dict[str, Any]]]:\n",
+    "\n",
+    "    clustering_results = {}\n",
+    "\n",
+    "    for ep_name, by_topo in env_configs.items():\n",
+    "        clustering_results[ep_name] = {}\n",
+    "\n",
+    "        for topo_name, by_scen in by_topo.items():\n",
+    "            clustering_results[ep_name][topo_name] = {}\n",
+    "\n",
+    "            for scen_name, env_cfg in by_scen.items():\n",
+    "\n",
+    "                clust = env_cfg.get(\"clustering\", {})\n",
+    "                feats = clust.get(\"features\", None)\n",
+    "                k_sel = clust.get(\"k_selection\", None)\n",
+    "\n",
+    "                # sanity check\n",
+    "                if feats is None or \"X\" not in feats:\n",
+    "                    if verbose:\n",
+    "                        print(f\"[4.3/skip] {ep_name}/{topo_name}/{scen_name}: no feature matrix.\")\n",
+    "                    continue\n",
+    "\n",
+    "                if k_sel is None or \"best_K\" not in k_sel:\n",
+    "                    if verbose:\n",
+    "                        print(f\"[4.3/skip] {ep_name}/{topo_name}/{scen_name}: no K chosen.\")\n",
+    "                    continue\n",
+    "\n",
+    "                X = feats[\"X\"]\n",
+    "                agent_ids = feats[\"agent_ids\"]\n",
+    "                best_K = int(k_sel[\"best_K\"])\n",
+    "\n",
+    "                if best_K <= 1 or best_K > X.shape[0]:\n",
+    "                    if verbose:\n",
+    "                        print(f\"[4.3/skip] invalid best_K={best_K} for {ep_name}/{topo_name}/{scen_name}.\")\n",
+    "                    continue\n",
+    "\n",
+    "                # ------------------------------\n",
+    "                # Final K-Means fit\n",
+    "                # ------------------------------\n",
+    "                km = KMeans(\n",
+    "                    n_clusters=best_K,\n",
+    "                    random_state=random_state,\n",
+    "                    n_init=\"auto\"\n",
+    "                )\n",
+    "                labels = km.fit_predict(X)\n",
+    "                centers = km.cluster_centers_\n",
+    "\n",
+    "                # Store results\n",
+    "                env_cfg[\"clustering\"][\"final\"] = {\n",
+    "                    \"K\": best_K,\n",
+    "                    \"labels\": labels,\n",
+    "                    \"centers\": centers,\n",
+    "                    \"agent_ids\": agent_ids,\n",
+    "                }\n",
+    "\n",
+    "                clustering_results[ep_name][topo_name][scen_name] = {\n",
+    "                    \"K\": best_K,\n",
+    "                    \"labels\": labels,\n",
+    "                    \"centers\": centers,\n",
+    "                    \"agent_ids\": agent_ids,\n",
+    "                }\n",
+    "\n",
+    "                if verbose:\n",
+    "                    print(f\"[4.3] {ep_name}/{topo_name}/{scen_name}:\")\n",
+    "                    print(f\"      best_K = {best_K}\")\n",
+    "                    print(f\"      labels distribution:\", np.bincount(labels))\n",
+    "                    print(f\"      centers shape:\", centers.shape)\n",
+    "                    print(\"-\" * 50)\n",
+    "\n",
+    "    return clustering_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4.3] ep_000/clustered/heavy:\n",
+      "      best_K = 2\n",
+      "      labels distribution: [16  2]\n",
+      "      centers shape: (2, 14)\n",
+      "--------------------------------------------------\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4.3] ep_000/clustered/light:\n",
+      "      best_K = 3\n",
+      "      labels distribution: [7 6 5]\n",
+      "      centers shape: (3, 14)\n",
+      "--------------------------------------------------\n",
+      "[4.3] ep_000/clustered/moderate:\n",
+      "      best_K = 4\n",
+      "      labels distribution: [10  4  3  1]\n",
+      "      centers shape: (4, 14)\n",
+      "--------------------------------------------------\n",
+      "[4.3] ep_000/full_mesh/heavy:\n",
+      "      best_K = 2\n",
+      "      labels distribution: [16  2]\n",
+      "      centers shape: (2, 14)\n",
+      "--------------------------------------------------\n",
+      "[4.3] ep_000/full_mesh/light:\n",
+      "      best_K = 3\n",
+      "      labels distribution: [7 6 5]\n",
+      "      centers shape: (3, 14)\n",
+      "--------------------------------------------------\n",
+      "[4.3] ep_000/full_mesh/moderate:\n",
+      "      best_K = 4\n",
+      "      labels distribution: [10  4  3  1]\n",
+      "      centers shape: (4, 14)\n",
+      "--------------------------------------------------\n",
+      "[4.3] ep_000/sparse_ring/heavy:\n",
+      "      best_K = 2\n",
+      "      labels distribution: [16  2]\n",
+      "      centers shape: (2, 14)\n",
+      "--------------------------------------------------\n",
+      "[4.3] ep_000/sparse_ring/light:\n",
+      "      best_K = 3\n",
+      "      labels distribution: [7 6 5]\n",
+      "      centers shape: (3, 14)\n",
+      "--------------------------------------------------\n",
+      "[4.3] ep_000/sparse_ring/moderate:\n",
+      "      best_K = 4\n",
+      "      labels distribution: [10  4  3  1]\n",
+      "      centers shape: (4, 14)\n",
+      "--------------------------------------------------\n",
+      "\n",
+      "=== STEP 4.3 EXAMPLE: ep_000 / clustered / heavy ===\n",
+      "K: 2\n",
+      "Label counts: [16  2]\n",
+      "Centers shape: (2, 14)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ------------------------\n",
+    "# Example run\n",
+    "# ------------------------\n",
+    "clustering_final = step4_3_run_final_kmeans_for_all_envs(\n",
+    "    env_configs,\n",
+    "    random_state=42,\n",
+    "    verbose=True\n",
+    ")\n",
+    "\n",
+    "# Example inspection\n",
+    "print(\"\\n=== STEP 4.3 EXAMPLE: ep_000 / clustered / heavy ===\")\n",
+    "ex = clustering_final[\"ep_000\"][\"clustered\"][\"heavy\"]\n",
+    "print(\"K:\", ex[\"K\"])\n",
+    "print(\"Label counts:\", np.bincount(ex[\"labels\"]))\n",
+    "print(\"Centers shape:\", ex[\"centers\"].shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.decomposition import PCA\n",
+    "from typing import Dict, Any\n",
+    "\n",
+    "\n",
+    "def step4_3_plot_clusters_pca(\n",
+    "    env_configs: Dict[str, Dict[str, Dict[str, Any]]],\n",
+    "    out_root: str = \"./artifacts/clustering\",\n",
+    "    verbose: bool = True\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    For each environment (ep/topology/scenario), take:\n",
+    "        - X (scaled feature matrix)\n",
+    "        - labels (final K-Means labels)\n",
+    "    Project X to 2D via PCA and save scatter plot.\n",
+    "\n",
+    "    Output saved as:\n",
+    "        <out_root>/<ep>/<topology>/<scenario>/cluster_plot_pca.png\n",
+    "    \"\"\"\n",
+    "    for ep_name, by_topo in env_configs.items():\n",
+    "        for topo_name, by_scen in by_topo.items():\n",
+    "            for scen_name, env_cfg in by_scen.items():\n",
+    "\n",
+    "                # Must have clustering results\n",
+    "                clust = env_cfg.get(\"clustering\", {})\n",
+    "                feats = clust.get(\"features\", None)\n",
+    "                final = clust.get(\"final\", None)\n",
+    "\n",
+    "                if feats is None or \"X\" not in feats:\n",
+    "                    continue\n",
+    "                if final is None or \"labels\" not in final:\n",
+    "                    if verbose:\n",
+    "                        print(f\"[PCA/skip] {ep_name}/{topo_name}/{scen_name}: no final KMeans labels.\")\n",
+    "                    continue\n",
+    "\n",
+    "                X = feats[\"X\"]\n",
+    "                labels = final[\"labels\"]\n",
+    "                K = final[\"K\"]\n",
+    "\n",
+    "                # PCA projection\n",
+    "                pca = PCA(n_components=2, random_state=42)\n",
+    "                X_2d = pca.fit_transform(X)\n",
+    "\n",
+    "                # Plot\n",
+    "                out_dir = os.path.join(out_root, ep_name, topo_name, scen_name)\n",
+    "                os.makedirs(out_dir, exist_ok=True)\n",
+    "                out_path = os.path.join(out_dir, \"cluster_plot_pca.png\")\n",
+    "\n",
+    "                plt.figure(figsize=(6, 5))\n",
+    "\n",
+    "                for cl in np.unique(labels):\n",
+    "                    mask = (labels == cl)\n",
+    "                    plt.scatter(\n",
+    "                        X_2d[mask, 0],\n",
+    "                        X_2d[mask, 1],\n",
+    "                        label=f\"Cluster {cl}\",\n",
+    "                        alpha=0.75,\n",
+    "                        s=50\n",
+    "                    )\n",
+    "\n",
+    "                plt.title(f\"PCA Clusters: {ep_name} / {topo_name} / {scen_name}  (K={K})\")\n",
+    "                plt.xlabel(\"PCA Component 1\")\n",
+    "                plt.ylabel(\"PCA Component 2\")\n",
+    "                plt.legend()\n",
+    "                plt.grid(True)\n",
+    "\n",
+    "                plt.tight_layout()\n",
+    "                plt.savefig(out_path, dpi=150)\n",
+    "                plt.close()\n",
+    "\n",
+    "                if verbose:\n",
+    "                    print(f\"[PCA] Saved PCA cluster plot → {out_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[PCA] Saved PCA cluster plot → ./artifacts/clustering\\ep_000\\clustered\\heavy\\cluster_plot_pca.png\n",
+      "[PCA] Saved PCA cluster plot → ./artifacts/clustering\\ep_000\\clustered\\light\\cluster_plot_pca.png\n",
+      "[PCA] Saved PCA cluster plot → ./artifacts/clustering\\ep_000\\clustered\\moderate\\cluster_plot_pca.png\n",
+      "[PCA] Saved PCA cluster plot → ./artifacts/clustering\\ep_000\\full_mesh\\heavy\\cluster_plot_pca.png\n",
+      "[PCA] Saved PCA cluster plot → ./artifacts/clustering\\ep_000\\full_mesh\\light\\cluster_plot_pca.png\n",
+      "[PCA] Saved PCA cluster plot → ./artifacts/clustering\\ep_000\\full_mesh\\moderate\\cluster_plot_pca.png\n",
+      "[PCA] Saved PCA cluster plot → ./artifacts/clustering\\ep_000\\sparse_ring\\heavy\\cluster_plot_pca.png\n",
+      "[PCA] Saved PCA cluster plot → ./artifacts/clustering\\ep_000\\sparse_ring\\light\\cluster_plot_pca.png\n",
+      "[PCA] Saved PCA cluster plot → ./artifacts/clustering\\ep_000\\sparse_ring\\moderate\\cluster_plot_pca.png\n"
+     ]
+    }
+   ],
+   "source": [
+    "step4_3_plot_clusters_pca(env_configs, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualization — Display clusters in 2D space"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "<h3> 4.4. Store cluster labels </h3>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
